# StrawberryEMU

./: README
Core/src/main/: CMakeLists.txt
Core/src/main/AI/: CreatureAI.cpp  CreatureAI.h  CreatureAIFactory.h  CreatureAIImpl.h  CreatureAIRegistry.cpp  CreatureAIRegistry.h  CreatureAISelector.cpp  CreatureAISelector.h
Core/src/main/AI/CoreAI/: CombatAI.cpp  CombatAI.h  GameObjectAI.cpp  GameObjectAI.h  GuardAI.cpp  GuardAI.h  PassiveAI.cpp  PassiveAI.h  PetAI.cpp  PetAI.h  ReactorAI.cpp  ReactorAI.h  TotemAI.cpp  TotemAI.h  UnitAI.cpp  UnitAI.h
Core/src/main/AI/EventAI/: CreatureEventAI.cpp  CreatureEventAI.h  CreatureEventAIMgr.cpp  CreatureEventAIMgr.h
Core/src/main/AI/ScriptedAI/: ScriptedCreature.cpp  ScriptedEscortAI.cpp  ScriptedEscortAI.h  ScriptedFollowerAI.cpp  ScriptedFollowerAI.h  ScriptedSimpleAI.cpp
Core/src/main/AI/SmartScripts/: SmartAI.cpp  SmartAI.h  SmartScript.cpp  SmartScript.h  SmartScriptMgr.cpp  SmartScriptMgr.h
Core/src/main/Accounts/: AccountMgr.cpp  AccountMgr.h
Core/src/main/Achievements/: AchievementMgr.cpp  AchievementMgr.h
Core/src/main/Addons/: AddonMgr.cpp  AddonMgr.h
Core/src/main/AuctionHouse/: AuctionHouseMgr.cpp  AuctionHouseMgr.h
Core/src/main/Battlegrounds/: ArenaTeam.cpp  ArenaTeam.h  Battleground.cpp  Battleground.h  BattlegroundMgr.cpp  BattlegroundMgr.h  BattlegroundQueue.cpp  BattlegroundQueue.h
Core/src/main/Battlegrounds/Zones/: BattlegroundAA.cpp  BattlegroundAA.h  BattlegroundAB.cpp  BattlegroundAB.h  BattlegroundAV.cpp  BattlegroundAV.h  BattlegroundBE.cpp  BattlegroundBE.h  BattlegroundDS.cpp  BattlegroundDS.h  BattlegroundEY.cpp  BattlegroundEY.h  BattlegroundIC.cpp  BattlegroundIC.h  BattlegroundNA.cpp  BattlegroundNA.h  BattlegroundRB.cpp  BattlegroundRB.h  BattlegroundRL.cpp  BattlegroundRL.h  BattlegroundRV.cpp  BattlegroundRV.h  BattlegroundSA.cpp  BattlegroundSA.h  BattlegroundWS.cpp  (+1 more)
Core/src/main/Calendar/: Calendar.cpp  Calendar.h
Core/src/main/Chat/: Chat.cpp  Chat.h
Core/src/main/Combat/: HostileRefManager.cpp  HostileRefManager.h  ThreatManager.cpp  ThreatManager.h  UnitEvents.h
Core/src/main/Conditions/: ConditionMgr.cpp  ConditionMgr.h  DisableMgr.cpp  DisableMgr.h
Core/src/main/DataStores/: DB2Stores.cpp  DB2Stores.h  DB2Structure.h  DB2fmt.h  DBCEnums.h  DBCStores.cpp  DBCStores.h  DBCStructure.cpp  DBCStructure.h  DBCfmt.h
Core/src/main/DungeonFinding/: LFGMgr.cpp  LFGMgr.h  LFGScripts.cpp  LFGScripts.h
Core/src/main/Events/: GameEventMgr.cpp  GameEventMgr.h
Core/src/main/Globals/: ObjectAccessor.cpp  ObjectAccessor.h  ObjectMgr.cpp  ObjectMgr.h
Core/src/main/Grids/: Grid.h  GridDefines.h  GridLoader.h  GridRefManager.h  GridReference.h  GridStates.cpp  GridStates.h  NGrid.h  ObjectGridLoader.cpp  ObjectGridLoader.h
Core/src/main/Groups/: Group.cpp  Group.h  GroupRefManager.h  GroupReference.cpp  GroupReference.h
Core/src/main/Guilds/: Guild.cpp  Guild.h
Core/src/main/Instances/: InstanceSaveMgr.cpp  InstanceSaveMgr.h  InstanceScript.cpp  InstanceScript.h
Core/src/main/Loot/: LootMgr.cpp  LootMgr.h
Core/src/main/Mails/: Mail.cpp  Mail.h
Core/src/main/Maps/: Map.cpp  Map.h  MapInstanced.cpp  MapInstanced.h  MapManager.cpp  MapManager.h  MapRefManager.h  MapReference.h  ZoneScript.h
Core/src/main/Miscellaneous/: Formulas.h  Language.h  SharedDefines.h
Core/src/main/Movement/: DestinationHolder.cpp  DestinationHolder.h  DestinationHolderImp.h  FollowerRefManager.h  FollowerReference.cpp  FollowerReference.h  MotionMaster.cpp  MotionMaster.h  MovementGenerator.cpp  MovementGenerator.h  MovementGeneratorImpl.h  Traveller.h
Core/src/main/OutdoorPvP/: OutdoorPvP.cpp  OutdoorPvP.h  OutdoorPvPMgr.cpp
Core/src/main/PCH/: PCH.h
Core/src/main/Pools/: PoolMgr.cpp  PoolMgr.h
Core/src/main/Quests/: QuestDef.cpp  QuestDef.h
Core/src/main/Reputation/: ReputationMgr.cpp  ReputationMgr.h
Core/src/main/Scripting/: MapScripts.cpp  ScriptLoader.cpp  ScriptMgr.cpp  ScriptMgr.h  ScriptSystem.cpp  ScriptSystem.h
Core/src/main/Server/: WorldSocket.cpp  WorldSocketMgr.cpp  WorldSocketMgr.h
Core/src/main/Skills/: SkillDiscovery.cpp  SkillDiscovery.h  SkillExtraItems.cpp  SkillExtraItems.h
Core/src/main/Spells/: Spell.cpp  Spell.h  SpellEffects.cpp  SpellMgr.cpp  SpellMgr.h  SpellScript.cpp  SpellScript.h
Core/src/main/Texts/: CreatureTextMgr.cpp  CreatureTextMgr.h
Core/src/main/Tickets/: TicketMgr.cpp
Core/src/main/Tools/: CharacterDatabaseCleaner.cpp  CharacterDatabaseCleaner.h  PlayerDump.cpp  PlayerDump.h
Core/src/main/Weather/: Weather.cpp  Weather.h  WeatherMgr.cpp  WeatherMgr.h
Core/src/main/World/: World.cpp  World.h
Core/src/server/realm/: CMakeLists.txt  Main.cpp  realm.rc  realmserver.conf.dist
Core/src/server/world/: CMakeLists.txt  Main.cpp  Master.cpp  Master.h  run-worldserver  world.rc  worldserver.conf.dist
Core/src/shared/: CMakeLists.txt  Common.cpp  Common.h  CompilerDefs.h  Define.h  SystemConfig.h  revision_nr.h
Core/src/shared/Collision/: BoundingIntervalHierarchy.cpp  BoundingIntervalHierarchy.h
Core/src/shared/Configuration/: Config.cpp  Config.h
Core/src/shared/Cryptography/: ARC4.cpp  ARC4.h  BigNumber.cpp  BigNumber.h  HMACSHA1.cpp  HMACSHA1.h  SHA1.cpp  SHA1.h
Core/src/shared/DataStores/: DB2FileLoader.cpp  DB2FileLoader.h  DB2Store.h  DBCFileLoader.cpp  DBCFileLoader.h  DBCStore.h
Core/src/shared/Database/: DatabaseEnv.h  DatabaseWorker.cpp  DatabaseWorkerPool.h  Field.h  MySQLConnection.cpp  PreparedStatement.cpp  QueryResult.cpp  QueryResult.h  SQLStorage.cpp  SQLStorage.h  SQLStorageImpl.h
Core/src/shared/Debugging/: Errors.h  WheatyExceptionReport.cpp
Core/src/shared/Dynamic/: FactoryHolder.h  LinkedList.h  ObjectRegistry.h  TypeContainer.h  TypeContainerFunctions.h  TypeContainerFunctionsPtr.h  TypeContainerVisitor.h  TypeList.h  UnorderedMap.h
Core/src/shared/Logging/: Log.cpp  Log.h
Core/src/shared/PCH/: sharedPCH.h
Core/src/shared/Packets/: ByteBuffer.h  WorldPacket.h
Core/src/shared/Utilities/: ByteConverter.h  EventProcessor.cpp  EventProcessor.h  SignalHandler.h  Timer.h  Util.cpp  Util.h
(+372 files in other folders)
