INCLUDE_DIRECTORIES(
Achievements
Battlegrounds/Zones
AI/SmartScripts
AI/ScriptedAI
AI/EventAI
AI/CoreAI
World
Weather
Tools
Tickets
Texts
Spells
Skills
Server
Scripting
Reputation
Quests
Pools
PCH
OutdoorPvP
Movement
Miscellaneous
Maps
Mails
Loot
Instances
Guilds
Groups
Grids
Globals
Spells/Auras
Server/Logs
Server/Protocol/Handlers
Server/Protocol/Handlers/Opcodes
Server/Protocol/Handlers/Packets
Server/Protocol
Server/Sessions
Server/Sockets
Movement/Waypoints
Movement/MovementGenerators
Grids/Notifiers
Grids/Cells
Entities/Object/Updates
Entities/Item/Container
Entities/Vehicle
Entities/Unit
Entities/Transport
Entities/Totem
Entities/Player
Entities/Pet
Entities/Object
Entities/Item
Entities/GameObject
Entities/DynamicObject
Entities/Creature
Entities/Corpse
Events
Entities
DungeonFinding
DataStores
Conditions
Combat
Chat/Commands
Chat/Channels
Chat
Calendar
Battlegrounds
AuctionHouse
AI
Addons
Accounts
../../dep
../../dep/mysql
../../dep/mysql/include
../../dep/zlib
../../dep/mysql/extra/yassl/include
../shared
../shared/Collision
../shared/Collision/Management
../shared/Collision/Maps
../shared/Collision/Models
../shared/Collision/PCH
../shared/Configuration
../shared/Cryptography
../shared/Cryptography/Authentication
../shared/DataStores
../shared/Database
../shared/Dynamic
../shared/Dynamic/LinkedReference
../shared/Logging
../shared/Packets
../shared/Threading
../shared/Utilities
../scripts
../scripts/PCH
../server
)

SET (main_STAT_SRCS
Accounts/AccountMgr.cpp
Achievements/AchievementMgr.cpp
Addons/AddonMgr.cpp
AI/CoreAI/CombatAI.cpp
AI/CoreAI/GameObjectAI.cpp
AI/CoreAI/GuardAI.cpp
AI/CoreAI/PassiveAI.cpp
AI/CoreAI/PetAI.cpp
AI/CoreAI/ReactorAI.cpp
AI/CoreAI/TotemAI.cpp
AI/CoreAI/UnitAI.cpp
AI/CreatureAI.cpp
AI/CreatureAIRegistry.cpp
AI/CreatureAISelector.cpp
AI/EventAI/CreatureEventAI.cpp
AI/EventAI/CreatureEventAIMgr.cpp
AI/ScriptedAI/ScriptedCreature.cpp
AI/ScriptedAI/ScriptedEscortAI.cpp
AI/ScriptedAI/ScriptedFollowerAI.cpp
AI/ScriptedAI/ScriptedSimpleAI.cpp
AI/SmartScripts/SmartAI.cpp
AI/SmartScripts/SmartScript.cpp
AI/SmartScripts/SmartScriptMgr.cpp
AuctionHouse/AuctionHouseMgr.cpp
Battlegrounds/ArenaTeam.cpp
Battlegrounds/Battleground.cpp
Battlegrounds/BattlegroundMgr.cpp
Battlegrounds/BattlegroundQueue.cpp
Battlegrounds/Zones/BattlegroundAA.cpp
Battlegrounds/Zones/BattlegroundAB.cpp
Battlegrounds/Zones/BattlegroundAV.cpp
Battlegrounds/Zones/BattlegroundBE.cpp
Battlegrounds/Zones/BattlegroundDS.cpp
Battlegrounds/Zones/BattlegroundEY.cpp
Battlegrounds/Zones/BattlegroundIC.cpp
Battlegrounds/Zones/BattlegroundNA.cpp
Battlegrounds/Zones/BattlegroundRB.cpp
Battlegrounds/Zones/BattlegroundRL.cpp
Battlegrounds/Zones/BattlegroundRV.cpp
Battlegrounds/Zones/BattlegroundSA.cpp
Battlegrounds/Zones/BattlegroundWS.cpp
Calendar/Calendar.cpp
Chat/Channels/Channel.cpp
Chat/Channels/ChannelMgr.cpp
Chat/Chat.cpp
Chat/Commands/Debugcmds.cpp
Chat/Commands/Level0.cpp
Chat/Commands/Level1.cpp
Chat/Commands/Level2.cpp
Chat/Commands/Level3.cpp
Chat/Commands/TicketCommands.cpp
Combat/HostileRefManager.cpp
Combat/ThreatManager.cpp
Conditions/ConditionMgr.cpp
Conditions/DisableMgr.cpp
DataStores/DB2Stores.cpp
DataStores/DBCStores.cpp
DataStores/DBCStructure.cpp
DungeonFinding/LFGGroupData.cpp
DungeonFinding/LFGMgr.cpp
DungeonFinding/LFGPlayerData.cpp
DungeonFinding/LFGScripts.cpp
Entities/Corpse/Corpse.cpp
Entities/Creature/Creature.cpp
Entities/Creature/CreatureGroups.cpp
Entities/Creature/GossipDef.cpp
Entities/Creature/TemporarySummon.cpp
Entities/DynamicObject/DynamicObject.cpp
Entities/GameObject/GameObject.cpp
Entities/Item/Container/Bag.cpp
Entities/Item/Item.cpp
Entities/Item/ItemEnchantmentMgr.cpp
Entities/Object/Object.cpp
Entities/Object/ObjectPosSelector.cpp
Entities/Object/Updates/UpdateData.cpp
Entities/Pet/Pet.cpp
Entities/Player/Player.cpp
Entities/Player/SocialMgr.cpp
Entities/Totem/Totem.cpp
Entities/Transport/Transport.cpp
Entities/Unit/StatSystem.cpp
Entities/Unit/Unit.cpp
Entities/Vehicle/Vehicle.cpp
Events/GameEventMgr.cpp
Globals/ObjectAccessor.cpp
Globals/ObjectMgr.cpp
Grids/GridStates.cpp
Grids/Notifiers/GridNotifiers.cpp
Grids/ObjectGridLoader.cpp
Groups/Group.cpp
Groups/GroupReference.cpp
Guilds/Guild.cpp
Instances/InstanceSaveMgr.cpp
Instances/InstanceScript.cpp
Loot/LootMgr.cpp
Mails/Mail.cpp
Maps/Map.cpp
Maps/MapInstanced.cpp
Maps/MapManager.cpp
Maps/MapUpdater.cpp
Movement/DestinationHolder.cpp
Movement/FollowerReference.cpp
Movement/MotionMaster.cpp
Movement/MovementGenerator.cpp
Movement/MovementGenerators/ConfusedMovementGenerator.cpp
Movement/MovementGenerators/FleeingMovementGenerator.cpp
Movement/MovementGenerators/HomeMovementGenerator.cpp
Movement/MovementGenerators/IdleMovementGenerator.cpp
Movement/MovementGenerators/PointMovementGenerator.cpp
Movement/MovementGenerators/RandomMovementGenerator.cpp
Movement/MovementGenerators/TargetedMovementGenerator.cpp
Movement/MovementGenerators/WaypointMovementGenerator.cpp
Movement/Waypoints/WaypointManager.cpp
OutdoorPvP/OutdoorPvP.cpp
OutdoorPvP/OutdoorPvPMgr.cpp
PCH/PCH.cpp
Pools/PoolMgr.cpp
Quests/QuestDef.cpp
Reputation/ReputationMgr.cpp
Scripting/MapScripts.cpp
Scripting/ScriptLoader.cpp
Scripting/ScriptMgr.cpp
Scripting/ScriptSystem.cpp
Server/Protocol/Handlers/Opcodes/OpcodeHandler.cpp
Server/Protocol/Handlers/Packets/AddonHandler.cpp
Server/Protocol/Handlers/Packets/ArenaTeamHandler.cpp
Server/Protocol/Handlers/Packets/AuctionHouseHandler.cpp
Server/Protocol/Handlers/Packets/AuthHandler.cpp
Server/Protocol/Handlers/Packets/BattleGroundHandler.cpp
Server/Protocol/Handlers/Packets/CalendarHandler.cpp
Server/Protocol/Handlers/Packets/ChannelHandler.cpp
Server/Protocol/Handlers/Packets/CharacterHandler.cpp
Server/Protocol/Handlers/Packets/ChatHandler.cpp
Server/Protocol/Handlers/Packets/CombatHandler.cpp
Server/Protocol/Handlers/Packets/DuelHandler.cpp
Server/Protocol/Handlers/Packets/GroupHandler.cpp
Server/Protocol/Handlers/Packets/GuildHandler.cpp
Server/Protocol/Handlers/Packets/ItemHandler.cpp
Server/Protocol/Handlers/Packets/LFGHandler.cpp
Server/Protocol/Handlers/Packets/LootHandler.cpp
Server/Protocol/Handlers/Packets/MailHandler.cpp
Server/Protocol/Handlers/Packets/MiscHandler.cpp
Server/Protocol/Handlers/Packets/MovementHandler.cpp
Server/Protocol/Handlers/Packets/NPCHandler.cpp
Server/Protocol/Handlers/Packets/PetHandler.cpp
Server/Protocol/Handlers/Packets/PetitionsHandler.cpp
Server/Protocol/Handlers/Packets/QueryHandler.cpp
Server/Protocol/Handlers/Packets/QuestHandler.cpp
Server/Protocol/Handlers/Packets/SkillHandler.cpp
Server/Protocol/Handlers/Packets/SpellHandler.cpp
Server/Protocol/Handlers/Packets/TaxiHandler.cpp
Server/Protocol/Handlers/Packets/TicketHandler.cpp
Server/Protocol/Handlers/Packets/TradeHandler.cpp
Server/Protocol/Handlers/Packets/VehicleHandler.cpp
Server/Protocol/Handlers/Packets/VoiceChatHandler.cpp
Server/Logs/WorldLog.cpp
Server/Sessions/WorldSession.cpp
Server/Sockets/WorldSocket.cpp
Server/Sockets/WorldSocketMgr.cpp
Skills/SkillDiscovery.cpp
Skills/SkillExtraItems.cpp
Spells/Auras/SpellAuraEffects.cpp
Spells/Auras/SpellAuras.cpp
Spells/Spell.cpp
Spells/SpellEffects.cpp
Spells/SpellMgr.cpp
Spells/SpellScript.cpp
Texts/CreatureTextMgr.cpp
Tickets/TicketMgr.cpp
Tools/CharacterDatabaseCleaner.cpp
Tools/PlayerDump.cpp
Weather/Weather.cpp
Weather/WeatherMgr.cpp
World/World.cpp

#MAIN HEADER FILES
Accounts/AccountMgr.h
Achievements/AchievementMgr.h
Addons/AddonMgr.h
AI/CoreAI/CombatAI.h
AI/CoreAI/GameObjectAI.h
AI/CoreAI/GuardAI.h
AI/CoreAI/PassiveAI.h
AI/CoreAI/PetAI.h
AI/CoreAI/ReactorAI.h
AI/CoreAI/TotemAI.h
AI/CoreAI/UnitAI.h
AI/CreatureAI.h
AI/CreatureAIFactory.h
AI/CreatureAIImpl.h
AI/CreatureAIRegistry.h
AI/CreatureAISelector.h
AI/EventAI/CreatureEventAI.h
AI/EventAI/CreatureEventAIMgr.h
AI/ScriptedAI/ScriptedCreature.h
AI/ScriptedAI/ScriptedEscortAI.h
AI/ScriptedAI/ScriptedFollowerAI.h
AI/ScriptedAI/ScriptedGossip.h
AI/ScriptedAI/ScriptedSimpleAI.h
AI/SmartScripts/SmartAI.h
AI/SmartScripts/SmartScript.h
AI/SmartScripts/SmartScriptMgr.h
AuctionHouse/AuctionHouseMgr.h
Battlegrounds/ArenaTeam.h
Battlegrounds/Battleground.h
Battlegrounds/BattlegroundMgr.h
Battlegrounds/BattlegroundQueue.h
Battlegrounds/Zones/BattlegroundAA.h
Battlegrounds/Zones/BattlegroundAB.h
Battlegrounds/Zones/BattlegroundAV.h
Battlegrounds/Zones/BattlegroundBE.h
Battlegrounds/Zones/BattlegroundDS.h
Battlegrounds/Zones/BattlegroundEY.h
Battlegrounds/Zones/BattlegroundIC.h
Battlegrounds/Zones/BattlegroundNA.h
Battlegrounds/Zones/BattlegroundRB.h
Battlegrounds/Zones/BattlegroundRL.h
Battlegrounds/Zones/BattlegroundRV.h
Battlegrounds/Zones/BattlegroundSA.h
Battlegrounds/Zones/BattlegroundWS.h
Calendar/Calendar.h
Chat/Channels/Channel.h
Chat/Channels/ChannelMgr.h
Chat/Chat.h
Combat/HostileRefManager.h
Combat/ThreatManager.h
Combat/UnitEvents.h
Conditions/ConditionMgr.h
Conditions/DisableMgr.h
DataStores/DB2fmt.h
DataStores/DB2Stores.h
DataStores/DB2Structure.h
DataStores/DBCEnums.h
DataStores/DBCfmt.h
DataStores/DBCStores.h
DataStores/DBCStructure.h
DungeonFinding/LFG.h
DungeonFinding/LFGGroupData.h
DungeonFinding/LFGMgr.h
DungeonFinding/LFGPlayerData.h
DungeonFinding/LFGScripts.h
Entities/Corpse/Corpse.h
Entities/Creature/Creature.h
Entities/Creature/CreatureGroups.h
Entities/Creature/GossipDef.h
Entities/Creature/TemporarySummon.h
Entities/DynamicObject/DynamicObject.h
Entities/GameObject/GameObject.h
Entities/Item/Container/Bag.h
Entities/Item/Item.h
Entities/Item/ItemEnchantmentMgr.h
Entities/Item/ItemPrototype.h
Entities/Object/Object.h
Entities/Object/ObjectDefines.h
Entities/Object/ObjectPosSelector.h
Entities/Object/Updates/UpdateData.h
Entities/Object/Updates/UpdateFields.h
Entities/Object/Updates/UpdateMask.h
Entities/Pet/Pet.h
Entities/Player/Player.h
Entities/Player/SocialMgr.h
Entities/Totem/Totem.h
Entities/Transport/Transport.h
Entities/Unit/Unit.h
Entities/Vehicle/Vehicle.h
Events/GameEventMgr.h
Globals/ObjectAccessor.h
Globals/ObjectMgr.h
Grids/Cells/Cell.h
Grids/Cells/CellImpl.h
Grids/Grid.h
Grids/GridDefines.h
Grids/GridLoader.h
Grids/GridReference.h
Grids/GridRefManager.h
Grids/GridStates.h
Grids/NGrid.h
Grids/Notifiers/GridNotifiers.h
Grids/Notifiers/GridNotifiersImpl.h
Grids/ObjectGridLoader.h
Groups/Group.h
Groups/GroupReference.h
Groups/GroupRefManager.h
Guilds/Guild.h
Instances/InstanceSaveMgr.h
Instances/InstanceScript.h
Loot/LootMgr.h
Mails/Mail.h
Maps/Map.h
Maps/MapInstanced.h
Maps/MapManager.h
Maps/MapReference.h
Maps/MapRefManager.h
Maps/MapUpdater.h
Maps/ZoneScript.h
Miscellaneous/Formulas.h
Miscellaneous/Language.h
Miscellaneous/SharedDefines.h
Movement/DestinationHolder.h
Movement/DestinationHolderImp.h
Movement/FollowerReference.h
Movement/FollowerRefManager.h
Movement/MotionMaster.h
Movement/MovementGenerator.h
Movement/MovementGeneratorImpl.h
Movement/MovementGenerators/ConfusedMovementGenerator.h
Movement/MovementGenerators/FleeingMovementGenerator.h
Movement/MovementGenerators/HomeMovementGenerator.h
Movement/MovementGenerators/IdleMovementGenerator.h
Movement/MovementGenerators/PointMovementGenerator.h
Movement/MovementGenerators/RandomMovementGenerator.h
Movement/MovementGenerators/TargetedMovementGenerator.h
Movement/MovementGenerators/WaypointMovementGenerator.h
Movement/Traveller.h
Movement/Waypoints/Path.h
Movement/Waypoints/WaypointManager.h
OutdoorPvP/OutdoorPvP.h
OutdoorPvP/OutdoorPvPMgr.h
PCH/PCH.h
Pools/PoolMgr.h
Quests/QuestDef.h
Reputation/ReputationMgr.h
Scripting/ScriptLoader.h
Scripting/ScriptMgr.h
Scripting/ScriptSystem.h
Server/Protocol/Handlers/Opcodes/OpcodeHandler.h
Server/Protocol/Handlers/Packets/AddonHandler.h
Server/Protocol/Handlers/Packets/NPCHandler.h
Server/Logs/WorldLog.h
Server/Sockets/WorldSocket.h
Server/Sockets/WorldSocketMgr.h
Skills/SkillDiscovery.h
Skills/SkillExtraItems.h
Spells/Auras/SpellAuraDefines.h
Spells/Auras/SpellAuraEffects.h
Spells/Auras/SpellAuras.h
Spells/Spell.h
Spells/SpellMgr.h
Spells/SpellScript.h
Texts/CreatureTextMgr.h
Tickets/TicketMgr.h
Tools/CharacterDatabaseCleaner.h
Tools/PlayerDump.h
Weather/Weather.h
Weather/WeatherMgr.h
World/World.h

#SCRIPTS SOURCE FILES
../scripts/Commands/cs_account.cpp
../scripts/Commands/cs_achievement.cpp
../scripts/Commands/cs_debug.cpp
../scripts/Commands/cs_event.cpp
../scripts/Commands/cs_gm.cpp
../scripts/Commands/cs_go.cpp
../scripts/Commands/cs_gobject.cpp
../scripts/Commands/cs_honor.cpp
../scripts/Commands/cs_learn.cpp
../scripts/Commands/cs_modify.cpp
../scripts/Commands/cs_npc.cpp
../scripts/Commands/cs_quest.cpp
../scripts/Commands/cs_reload.cpp
../scripts/Commands/cs_tele.cpp
../scripts/Commands/cs_titles.cpp
../scripts/Commands/cs_wp.cpp
../scripts/EasternKingdoms/alterac_mountains.cpp
../scripts/EasternKingdoms/AlteracValley/alterac_valley.cpp
../scripts/EasternKingdoms/AlteracValley/boss_balinda.cpp
../scripts/EasternKingdoms/AlteracValley/boss_drekthar.cpp
../scripts/EasternKingdoms/AlteracValley/boss_galvangar.cpp
../scripts/EasternKingdoms/AlteracValley/boss_vanndar.cpp
../scripts/EasternKingdoms/arathi_highlands.cpp
../scripts/EasternKingdoms/BlackrockDepths/blackrock_depths.cpp
../scripts/EasternKingdoms/BlackrockDepths/boss_ambassador_flamelash.cpp
../scripts/EasternKingdoms/BlackrockDepths/boss_anubshiah.cpp
../scripts/EasternKingdoms/BlackrockDepths/boss_emperor_dagran_thaurissan.cpp
../scripts/EasternKingdoms/BlackrockDepths/boss_general_angerforge.cpp
../scripts/EasternKingdoms/BlackrockDepths/boss_gorosh_the_dervish.cpp
../scripts/EasternKingdoms/BlackrockDepths/boss_grizzle.cpp
../scripts/EasternKingdoms/BlackrockDepths/boss_high_interrogator_gerstahn.cpp
../scripts/EasternKingdoms/BlackrockDepths/boss_magmus.cpp
../scripts/EasternKingdoms/BlackrockDepths/boss_moira_bronzebeard.cpp
../scripts/EasternKingdoms/BlackrockDepths/boss_tomb_of_seven.cpp
../scripts/EasternKingdoms/BlackrockDepths/instance_blackrock_depths.cpp
../scripts/EasternKingdoms/BlackrockSpire/boss_drakkisath.cpp
../scripts/EasternKingdoms/BlackrockSpire/boss_gyth.cpp
../scripts/EasternKingdoms/BlackrockSpire/boss_halycon.cpp
../scripts/EasternKingdoms/BlackrockSpire/boss_highlord_omokk.cpp
../scripts/EasternKingdoms/BlackrockSpire/boss_mother_smolderweb.cpp
../scripts/EasternKingdoms/BlackrockSpire/boss_overlord_wyrmthalak.cpp
../scripts/EasternKingdoms/BlackrockSpire/boss_pyroguard_emberseer.cpp
../scripts/EasternKingdoms/BlackrockSpire/boss_quartermaster_zigris.cpp
../scripts/EasternKingdoms/BlackrockSpire/boss_rend_blackhand.cpp
../scripts/EasternKingdoms/BlackrockSpire/boss_shadow_hunter_voshgajin.cpp
../scripts/EasternKingdoms/BlackrockSpire/boss_the_beast.cpp
../scripts/EasternKingdoms/BlackrockSpire/boss_warmaster_voone.cpp
../scripts/EasternKingdoms/BlackrockSpire/instance_blackrock_spire.cpp
../scripts/EasternKingdoms/BlackwingLair/boss_broodlord_lashlayer.cpp
../scripts/EasternKingdoms/BlackwingLair/boss_chromaggus.cpp
../scripts/EasternKingdoms/BlackwingLair/boss_ebonroc.cpp
../scripts/EasternKingdoms/BlackwingLair/boss_firemaw.cpp
../scripts/EasternKingdoms/BlackwingLair/boss_flamegor.cpp
../scripts/EasternKingdoms/BlackwingLair/boss_nefarian.cpp
../scripts/EasternKingdoms/BlackwingLair/boss_razorgore.cpp
../scripts/EasternKingdoms/BlackwingLair/boss_vaelastrasz.cpp
../scripts/EasternKingdoms/BlackwingLair/boss_victor_nefarius.cpp
../scripts/EasternKingdoms/BlackwingLair/instance_blackwing_lair.cpp
../scripts/EasternKingdoms/blasted_lands.cpp
../scripts/EasternKingdoms/boss_kruul.cpp
../scripts/EasternKingdoms/burning_steppes.cpp
../scripts/EasternKingdoms/Deadmines/boss_mr_smite.cpp
../scripts/EasternKingdoms/Deadmines/deadmines.cpp
../scripts/EasternKingdoms/Deadmines/instance_deadmines.cpp
../scripts/EasternKingdoms/dun_morogh.cpp
../scripts/EasternKingdoms/duskwood.cpp
../scripts/EasternKingdoms/eastern_plaguelands.cpp
../scripts/EasternKingdoms/elwynn_forest.cpp
../scripts/EasternKingdoms/eversong_woods.cpp
../scripts/EasternKingdoms/ghostlands.cpp
../scripts/EasternKingdoms/Gnomeregan/gnomeregan.cpp
../scripts/EasternKingdoms/Gnomeregan/instance_gnomeregan.cpp
../scripts/EasternKingdoms/hinterlands.cpp
../scripts/EasternKingdoms/ironforge.cpp
../scripts/EasternKingdoms/isle_of_queldanas.cpp
../scripts/EasternKingdoms/Karazhan/boss_curator.cpp
../scripts/EasternKingdoms/Karazhan/boss_maiden_of_virtue.cpp
../scripts/EasternKingdoms/Karazhan/boss_midnight.cpp
../scripts/EasternKingdoms/Karazhan/boss_moroes.cpp
../scripts/EasternKingdoms/Karazhan/boss_netherspite.cpp
../scripts/EasternKingdoms/Karazhan/boss_nightbane.cpp
../scripts/EasternKingdoms/Karazhan/boss_prince_malchezaar.cpp
../scripts/EasternKingdoms/Karazhan/boss_shade_of_aran.cpp
../scripts/EasternKingdoms/Karazhan/boss_terestian_illhoof.cpp
../scripts/EasternKingdoms/Karazhan/bosses_opera.cpp
../scripts/EasternKingdoms/Karazhan/instance_karazhan.cpp
../scripts/EasternKingdoms/Karazhan/karazhan.cpp
../scripts/EasternKingdoms/loch_modan.cpp
../scripts/EasternKingdoms/MagistersTerrace/boss_felblood_kaelthas.cpp
../scripts/EasternKingdoms/MagistersTerrace/boss_priestess_delrissa.cpp
../scripts/EasternKingdoms/MagistersTerrace/boss_selin_fireheart.cpp
../scripts/EasternKingdoms/MagistersTerrace/boss_vexallus.cpp
../scripts/EasternKingdoms/MagistersTerrace/instance_magisters_terrace.cpp
../scripts/EasternKingdoms/MagistersTerrace/magisters_terrace.cpp
../scripts/EasternKingdoms/MoltenCore/boss_baron_geddon.cpp
../scripts/EasternKingdoms/MoltenCore/boss_garr.cpp
../scripts/EasternKingdoms/MoltenCore/boss_gehennas.cpp
../scripts/EasternKingdoms/MoltenCore/boss_golemagg.cpp
../scripts/EasternKingdoms/MoltenCore/boss_lucifron.cpp
../scripts/EasternKingdoms/MoltenCore/boss_magmadar.cpp
../scripts/EasternKingdoms/MoltenCore/boss_majordomo_executus.cpp
../scripts/EasternKingdoms/MoltenCore/boss_ragnaros.cpp
../scripts/EasternKingdoms/MoltenCore/boss_shazzrah.cpp
../scripts/EasternKingdoms/MoltenCore/boss_sulfuron_harbinger.cpp
../scripts/EasternKingdoms/MoltenCore/instance_molten_core.cpp
../scripts/EasternKingdoms/MoltenCore/molten_core.cpp
../scripts/EasternKingdoms/redridge_mountains.cpp
../scripts/EasternKingdoms/ScarletEnclave/chapter1.cpp
../scripts/EasternKingdoms/ScarletEnclave/chapter2.cpp
../scripts/EasternKingdoms/ScarletEnclave/chapter5.cpp
../scripts/EasternKingdoms/ScarletEnclave/the_scarlet_enclave.cpp
../scripts/EasternKingdoms/ScarletMonastery/boss_arcanist_doan.cpp
../scripts/EasternKingdoms/ScarletMonastery/boss_azshir_the_sleepless.cpp
../scripts/EasternKingdoms/ScarletMonastery/boss_bloodmage_thalnos.cpp
../scripts/EasternKingdoms/ScarletMonastery/boss_headless_horseman.cpp
../scripts/EasternKingdoms/ScarletMonastery/boss_herod.cpp
../scripts/EasternKingdoms/ScarletMonastery/boss_high_inquisitor_fairbanks.cpp
../scripts/EasternKingdoms/ScarletMonastery/boss_houndmaster_loksey.cpp
../scripts/EasternKingdoms/ScarletMonastery/boss_interrogator_vishas.cpp
../scripts/EasternKingdoms/ScarletMonastery/boss_mograine_and_whitemane.cpp
../scripts/EasternKingdoms/ScarletMonastery/boss_scorn.cpp
../scripts/EasternKingdoms/ScarletMonastery/instance_scarlet_monastery.cpp
../scripts/EasternKingdoms/Scholomance/boss_darkmaster_gandling.cpp
../scripts/EasternKingdoms/Scholomance/boss_death_knight_darkreaver.cpp
../scripts/EasternKingdoms/Scholomance/boss_doctor_theolen_krastinov.cpp
../scripts/EasternKingdoms/Scholomance/boss_illucia_barov.cpp
../scripts/EasternKingdoms/Scholomance/boss_instructor_malicia.cpp
../scripts/EasternKingdoms/Scholomance/boss_jandice_barov.cpp
../scripts/EasternKingdoms/Scholomance/boss_kormok.cpp
../scripts/EasternKingdoms/Scholomance/boss_lord_alexei_barov.cpp
../scripts/EasternKingdoms/Scholomance/boss_lorekeeper_polkelt.cpp
../scripts/EasternKingdoms/Scholomance/boss_ras_frostwhisper.cpp
../scripts/EasternKingdoms/Scholomance/boss_the_ravenian.cpp
../scripts/EasternKingdoms/Scholomance/boss_vectus.cpp
../scripts/EasternKingdoms/Scholomance/instance_scholomance.cpp
../scripts/EasternKingdoms/searing_gorge.cpp
../scripts/EasternKingdoms/ShadowfangKeep/instance_shadowfang_keep.cpp
../scripts/EasternKingdoms/ShadowfangKeep/shadowfang_keep.cpp
../scripts/EasternKingdoms/silvermoon_city.cpp
../scripts/EasternKingdoms/silverpine_forest.cpp
../scripts/EasternKingdoms/stormwind_city.cpp
../scripts/EasternKingdoms/stranglethorn_vale.cpp
../scripts/EasternKingdoms/Stratholme/boss_baron_rivendare.cpp
../scripts/EasternKingdoms/Stratholme/boss_baroness_anastari.cpp
../scripts/EasternKingdoms/Stratholme/boss_cannon_master_willey.cpp
../scripts/EasternKingdoms/Stratholme/boss_dathrohan_balnazzar.cpp
../scripts/EasternKingdoms/Stratholme/boss_magistrate_barthilas.cpp
../scripts/EasternKingdoms/Stratholme/boss_maleki_the_pallid.cpp
../scripts/EasternKingdoms/Stratholme/boss_nerubenkan.cpp
../scripts/EasternKingdoms/Stratholme/boss_order_of_silver_hand.cpp
../scripts/EasternKingdoms/Stratholme/boss_postmaster_malown.cpp
../scripts/EasternKingdoms/Stratholme/boss_ramstein_the_gorger.cpp
../scripts/EasternKingdoms/Stratholme/boss_timmy_the_cruel.cpp
../scripts/EasternKingdoms/Stratholme/instance_stratholme.cpp
../scripts/EasternKingdoms/Stratholme/stratholme.cpp
../scripts/EasternKingdoms/SunkenTemple/instance_sunken_temple.cpp
../scripts/EasternKingdoms/SunkenTemple/sunken_temple.cpp
../scripts/EasternKingdoms/SunwellPlateau/boss_brutallus.cpp
../scripts/EasternKingdoms/SunwellPlateau/boss_eredar_twins.cpp
../scripts/EasternKingdoms/SunwellPlateau/boss_felmyst.cpp
../scripts/EasternKingdoms/SunwellPlateau/boss_kalecgos.cpp
../scripts/EasternKingdoms/SunwellPlateau/boss_kiljaeden.cpp
../scripts/EasternKingdoms/SunwellPlateau/boss_muru.cpp
../scripts/EasternKingdoms/SunwellPlateau/instance_sunwell_plateau.cpp
../scripts/EasternKingdoms/SunwellPlateau/sunwell_plateau.cpp
../scripts/EasternKingdoms/swamp_of_sorrows.cpp
../scripts/EasternKingdoms/tirisfal_glades.cpp
../scripts/EasternKingdoms/Uldaman/boss_archaedas.cpp
../scripts/EasternKingdoms/Uldaman/boss_ironaya.cpp
../scripts/EasternKingdoms/Uldaman/instance_uldaman.cpp
../scripts/EasternKingdoms/Uldaman/uldaman.cpp
../scripts/EasternKingdoms/undercity.cpp
../scripts/EasternKingdoms/western_plaguelands.cpp
../scripts/EasternKingdoms/westfall.cpp
../scripts/EasternKingdoms/wetlands.cpp
../scripts/EasternKingdoms/ZulAman/boss_akilzon.cpp
../scripts/EasternKingdoms/ZulAman/boss_halazzi.cpp
../scripts/EasternKingdoms/ZulAman/boss_hexlord.cpp
../scripts/EasternKingdoms/ZulAman/boss_janalai.cpp
../scripts/EasternKingdoms/ZulAman/boss_nalorakk.cpp
../scripts/EasternKingdoms/ZulAman/boss_zuljin.cpp
../scripts/EasternKingdoms/ZulAman/instance_zulaman.cpp
../scripts/EasternKingdoms/ZulAman/zulaman.cpp
../scripts/EasternKingdoms/ZulGurub/boss_arlokk.cpp
../scripts/EasternKingdoms/ZulGurub/boss_gahzranka.cpp
../scripts/EasternKingdoms/ZulGurub/boss_grilek.cpp
../scripts/EasternKingdoms/ZulGurub/boss_hakkar.cpp
../scripts/EasternKingdoms/ZulGurub/boss_hazzarah.cpp
../scripts/EasternKingdoms/ZulGurub/boss_jeklik.cpp
../scripts/EasternKingdoms/ZulGurub/boss_jindo.cpp
../scripts/EasternKingdoms/ZulGurub/boss_mandokir.cpp
../scripts/EasternKingdoms/ZulGurub/boss_marli.cpp
../scripts/EasternKingdoms/ZulGurub/boss_renataki.cpp
../scripts/EasternKingdoms/ZulGurub/boss_thekal.cpp
../scripts/EasternKingdoms/ZulGurub/boss_venoxis.cpp
../scripts/EasternKingdoms/ZulGurub/boss_wushoolay.cpp
../scripts/EasternKingdoms/ZulGurub/instance_zulgurub.cpp
../scripts/Kalimdor/ashenvale.cpp
../scripts/Kalimdor/azshara.cpp
../scripts/Kalimdor/azuremyst_isle.cpp
../scripts/Kalimdor/BlackfathomDeeps/blackfathom_deeps.cpp
../scripts/Kalimdor/BlackfathomDeeps/boss_aku_mai.cpp
../scripts/Kalimdor/BlackfathomDeeps/boss_gelihast.cpp
../scripts/Kalimdor/BlackfathomDeeps/boss_kelris.cpp
../scripts/Kalimdor/BlackfathomDeeps/instance_blackfathom_deeps.cpp
../scripts/Kalimdor/bloodmyst_isle.cpp
../scripts/Kalimdor/boss_azuregos.cpp
../scripts/Kalimdor/CavernsOfTime/BattleForMountHyjal/boss_anetheron.cpp
../scripts/Kalimdor/CavernsOfTime/BattleForMountHyjal/boss_archimonde.cpp
../scripts/Kalimdor/CavernsOfTime/BattleForMountHyjal/boss_azgalor.cpp
../scripts/Kalimdor/CavernsOfTime/BattleForMountHyjal/boss_kazrogal.cpp
../scripts/Kalimdor/CavernsOfTime/BattleForMountHyjal/boss_rage_winterchill.cpp
../scripts/Kalimdor/CavernsOfTime/BattleForMountHyjal/hyjal.cpp
../scripts/Kalimdor/CavernsOfTime/BattleForMountHyjal/hyjal_trash.cpp
../scripts/Kalimdor/CavernsOfTime/BattleForMountHyjal/hyjalAI.cpp
../scripts/Kalimdor/CavernsOfTime/BattleForMountHyjal/instance_hyjal.cpp
../scripts/Kalimdor/CavernsOfTime/CullingOfStratholme/boss_epoch.cpp
../scripts/Kalimdor/CavernsOfTime/CullingOfStratholme/boss_infinite.cpp
../scripts/Kalimdor/CavernsOfTime/CullingOfStratholme/boss_mal_ganis.cpp
../scripts/Kalimdor/CavernsOfTime/CullingOfStratholme/boss_meathook.cpp
../scripts/Kalimdor/CavernsOfTime/CullingOfStratholme/boss_salramm.cpp
../scripts/Kalimdor/CavernsOfTime/CullingOfStratholme/culling_of_stratholme.cpp
../scripts/Kalimdor/CavernsOfTime/CullingOfStratholme/instance_culling_of_stratholme.cpp
../scripts/Kalimdor/CavernsOfTime/DarkPortal/boss_aeonus.cpp
../scripts/Kalimdor/CavernsOfTime/DarkPortal/boss_chrono_lord_deja.cpp
../scripts/Kalimdor/CavernsOfTime/DarkPortal/boss_temporus.cpp
../scripts/Kalimdor/CavernsOfTime/DarkPortal/dark_portal.cpp
../scripts/Kalimdor/CavernsOfTime/DarkPortal/instance_dark_portal.cpp
../scripts/Kalimdor/CavernsOfTime/EscapeFromDurnholdeKeep/boss_captain_skarloc.cpp
../scripts/Kalimdor/CavernsOfTime/EscapeFromDurnholdeKeep/boss_epoch_hunter.cpp
../scripts/Kalimdor/CavernsOfTime/EscapeFromDurnholdeKeep/boss_leutenant_drake.cpp
../scripts/Kalimdor/CavernsOfTime/EscapeFromDurnholdeKeep/instance_old_hillsbrad.cpp
../scripts/Kalimdor/CavernsOfTime/EscapeFromDurnholdeKeep/old_hillsbrad.cpp
../scripts/Kalimdor/darkshore.cpp
../scripts/Kalimdor/desolace.cpp
../scripts/Kalimdor/durotar.cpp
../scripts/Kalimdor/dustwallow_marsh.cpp
../scripts/Kalimdor/felwood.cpp
../scripts/Kalimdor/feralas.cpp
../scripts/Kalimdor/Maraudon/boss_celebras_the_cursed.cpp
../scripts/Kalimdor/Maraudon/boss_landslide.cpp
../scripts/Kalimdor/Maraudon/boss_noxxion.cpp
../scripts/Kalimdor/Maraudon/boss_princess_theradras.cpp
../scripts/Kalimdor/moonglade.cpp
../scripts/Kalimdor/mulgore.cpp
../scripts/Kalimdor/OnyxiasLair/boss_onyxia.cpp
../scripts/Kalimdor/OnyxiasLair/instance_onyxias_lair.cpp
../scripts/Kalimdor/orgrimmar.cpp
../scripts/Kalimdor/RazorfenDowns/boss_amnennar_the_coldbringer.cpp
../scripts/Kalimdor/RazorfenDowns/instance_razorfen_downs.cpp
../scripts/Kalimdor/RazorfenDowns/razorfen_downs.cpp
../scripts/Kalimdor/RazorfenKraul/instance_razorfen_kraul.cpp
../scripts/Kalimdor/RazorfenKraul/razorfen_kraul.cpp
../scripts/Kalimdor/RuinsOfAhnQiraj/boss_ayamiss.cpp
../scripts/Kalimdor/RuinsOfAhnQiraj/boss_buru.cpp
../scripts/Kalimdor/RuinsOfAhnQiraj/boss_kurinnaxx.cpp
../scripts/Kalimdor/RuinsOfAhnQiraj/boss_moam.cpp
../scripts/Kalimdor/RuinsOfAhnQiraj/boss_ossirian.cpp
../scripts/Kalimdor/RuinsOfAhnQiraj/boss_rajaxx.cpp
../scripts/Kalimdor/RuinsOfAhnQiraj/instance_ruins_of_ahnqiraj.cpp
../scripts/Kalimdor/silithus.cpp
../scripts/Kalimdor/stonetalon_mountains.cpp
../scripts/Kalimdor/tanaris.cpp
../scripts/Kalimdor/teldrassil.cpp
../scripts/Kalimdor/TempleOfAhnQiraj/boss_bug_trio.cpp
../scripts/Kalimdor/TempleOfAhnQiraj/boss_cthun.cpp
../scripts/Kalimdor/TempleOfAhnQiraj/boss_fankriss.cpp
../scripts/Kalimdor/TempleOfAhnQiraj/boss_huhuran.cpp
../scripts/Kalimdor/TempleOfAhnQiraj/boss_ouro.cpp
../scripts/Kalimdor/TempleOfAhnQiraj/boss_sartura.cpp
../scripts/Kalimdor/TempleOfAhnQiraj/boss_skeram.cpp
../scripts/Kalimdor/TempleOfAhnQiraj/boss_twinemperors.cpp
../scripts/Kalimdor/TempleOfAhnQiraj/boss_viscidus.cpp
../scripts/Kalimdor/TempleOfAhnQiraj/instance_temple_of_ahnqiraj.cpp
../scripts/Kalimdor/TempleOfAhnQiraj/mob_anubisath_sentinel.cpp
../scripts/Kalimdor/the_barrens.cpp
../scripts/Kalimdor/thousand_needles.cpp
../scripts/Kalimdor/thunder_bluff.cpp
../scripts/Kalimdor/ungoro_crater.cpp
../scripts/Kalimdor/WailingCaverns/instance_wailing_caverns.cpp
../scripts/Kalimdor/WailingCaverns/wailing_caverns.cpp
../scripts/Kalimdor/winterspring.cpp
../scripts/Kalimdor/ZulFarrak/instance_zulfarrak.cpp
../scripts/Kalimdor/ZulFarrak/zulfarrak.cpp
../scripts/Northrend/AzjolNerub/ahnkahet/boss_amanitar.cpp
../scripts/Northrend/AzjolNerub/ahnkahet/boss_elder_nadox.cpp
../scripts/Northrend/AzjolNerub/ahnkahet/boss_herald_volazj.cpp
../scripts/Northrend/AzjolNerub/ahnkahet/boss_jedoga_shadowseeker.cpp
../scripts/Northrend/AzjolNerub/ahnkahet/boss_prince_taldaram.cpp
../scripts/Northrend/AzjolNerub/ahnkahet/instance_ahnkahet.cpp
../scripts/Northrend/AzjolNerub/AzjolNerub/boss_anubarak.cpp
../scripts/Northrend/AzjolNerub/AzjolNerub/boss_hadronox.cpp
../scripts/Northrend/AzjolNerub/AzjolNerub/boss_krikthir_the_gatewatcher.cpp
../scripts/Northrend/AzjolNerub/AzjolNerub/instance_azjol_nerub.cpp
../scripts/Northrend/borean_tundra.cpp
../scripts/Northrend/CrusadersColiseum/TrialOfTheChampion/boss_argent_challenge.cpp
../scripts/Northrend/CrusadersColiseum/TrialOfTheChampion/boss_black_knight.cpp
../scripts/Northrend/CrusadersColiseum/TrialOfTheChampion/boss_grand_champions.cpp
../scripts/Northrend/CrusadersColiseum/TrialOfTheChampion/instance_trial_of_the_champion.cpp
../scripts/Northrend/CrusadersColiseum/TrialOfTheChampion/trial_of_the_champion.cpp
../scripts/Northrend/CrusadersColiseum/TrialOfTheCrusader/boss_anubarak_trial.cpp
../scripts/Northrend/CrusadersColiseum/TrialOfTheCrusader/boss_faction_champions.cpp
../scripts/Northrend/CrusadersColiseum/TrialOfTheCrusader/boss_lord_jaraxxus.cpp
../scripts/Northrend/CrusadersColiseum/TrialOfTheCrusader/boss_northrend_beasts.cpp
../scripts/Northrend/CrusadersColiseum/TrialOfTheCrusader/boss_twin_valkyr.cpp
../scripts/Northrend/CrusadersColiseum/TrialOfTheCrusader/instance_trial_of_the_crusader.cpp
../scripts/Northrend/CrusadersColiseum/TrialOfTheCrusader/trial_of_the_crusader.cpp
../scripts/Northrend/crystalsong_forest.cpp
../scripts/Northrend/dalaran.cpp
../scripts/Northrend/dragonblight.cpp
../scripts/Northrend/DraktharonKeep/boss_dred.cpp
../scripts/Northrend/DraktharonKeep/boss_novos.cpp
../scripts/Northrend/DraktharonKeep/boss_tharon_ja.cpp
../scripts/Northrend/DraktharonKeep/boss_trollgore.cpp
../scripts/Northrend/DraktharonKeep/instance_drak_tharon_keep.cpp
../scripts/Northrend/FrozenHalls/ForgeOfSouls/boss_bronjahm.cpp
../scripts/Northrend/FrozenHalls/ForgeOfSouls/boss_devourer_of_souls.cpp
../scripts/Northrend/FrozenHalls/ForgeOfSouls/forge_of_souls.cpp
../scripts/Northrend/FrozenHalls/ForgeOfSouls/instance_forge_of_souls.cpp
../scripts/Northrend/FrozenHalls/HallsOfReflection/boss_falric.cpp
../scripts/Northrend/FrozenHalls/HallsOfReflection/boss_marwyn.cpp
../scripts/Northrend/FrozenHalls/HallsOfReflection/halls_of_reflection.cpp
../scripts/Northrend/FrozenHalls/HallsOfReflection/instance_halls_of_reflection.cpp
../scripts/Northrend/FrozenHalls/PitOfSaron/boss_forgemaster_garfrost.cpp
../scripts/Northrend/FrozenHalls/PitOfSaron/boss_krickandick.cpp
../scripts/Northrend/FrozenHalls/PitOfSaron/boss_scourgelord_tyrannus.cpp
../scripts/Northrend/FrozenHalls/PitOfSaron/instance_pit_of_saron.cpp
../scripts/Northrend/FrozenHalls/PitOfSaron/pit_of_saron.cpp
../scripts/Northrend/grizzly_hills.cpp
../scripts/Northrend/Gundrak/boss_drakkari_colossus.cpp
../scripts/Northrend/Gundrak/boss_eck.cpp
../scripts/Northrend/Gundrak/boss_gal_darah.cpp
../scripts/Northrend/Gundrak/boss_moorabi.cpp
../scripts/Northrend/Gundrak/boss_slad_ran.cpp
../scripts/Northrend/Gundrak/instance_gundrak.cpp
../scripts/Northrend/howling_fjord.cpp
../scripts/Northrend/icecrown.cpp
../scripts/Northrend/IcecrownCitadel/boss_blood_prince_council.cpp
../scripts/Northrend/IcecrownCitadel/boss_blood_queen_lana_thel.cpp
../scripts/Northrend/IcecrownCitadel/boss_deathbringer_saurfang.cpp
../scripts/Northrend/IcecrownCitadel/boss_festergut.cpp
../scripts/Northrend/IcecrownCitadel/boss_lady_deathwhisper.cpp
../scripts/Northrend/IcecrownCitadel/boss_lord_marrowgar.cpp
../scripts/Northrend/IcecrownCitadel/boss_professor_putricide.cpp
../scripts/Northrend/IcecrownCitadel/boss_rotface.cpp
../scripts/Northrend/IcecrownCitadel/boss_sindragosa.cpp
../scripts/Northrend/IcecrownCitadel/icecrown_citadel.cpp
../scripts/Northrend/IcecrownCitadel/icecrown_citadel_teleport.cpp
../scripts/Northrend/IcecrownCitadel/instance_icecrown_citadel.cpp
../scripts/Northrend/isle_of_conquest.cpp
../scripts/Northrend/Naxxramas/boss_anubrekhan.cpp
../scripts/Northrend/Naxxramas/boss_faerlina.cpp
../scripts/Northrend/Naxxramas/boss_four_horsemen.cpp
../scripts/Northrend/Naxxramas/boss_gluth.cpp
../scripts/Northrend/Naxxramas/boss_gothik.cpp
../scripts/Northrend/Naxxramas/boss_grobbulus.cpp
../scripts/Northrend/Naxxramas/boss_heigan.cpp
../scripts/Northrend/Naxxramas/boss_kelthuzad.cpp
../scripts/Northrend/Naxxramas/boss_loatheb.cpp
../scripts/Northrend/Naxxramas/boss_maexxna.cpp
../scripts/Northrend/Naxxramas/boss_noth.cpp
../scripts/Northrend/Naxxramas/boss_patchwerk.cpp
../scripts/Northrend/Naxxramas/boss_razuvious.cpp
../scripts/Northrend/Naxxramas/boss_sapphiron.cpp
../scripts/Northrend/Naxxramas/boss_thaddius.cpp
../scripts/Northrend/Naxxramas/instance_naxxramas.cpp
../scripts/Northrend/Nexus/EyeOfEternity/boss_malygos.cpp
../scripts/Northrend/Nexus/EyeOfEternity/instance_eye_of_eternity.cpp
../scripts/Northrend/Nexus/Nexus/boss_anomalus.cpp
../scripts/Northrend/Nexus/Nexus/boss_keristrasza.cpp
../scripts/Northrend/Nexus/Nexus/boss_magus_telestra.cpp
../scripts/Northrend/Nexus/Nexus/boss_ormorok.cpp
../scripts/Northrend/Nexus/Nexus/commander_kolurg.cpp
../scripts/Northrend/Nexus/Nexus/commander_stoutbeard.cpp
../scripts/Northrend/Nexus/Nexus/instance_nexus.cpp
../scripts/Northrend/Nexus/Oculus/boss_drakos.cpp
../scripts/Northrend/Nexus/Oculus/boss_eregos.cpp
../scripts/Northrend/Nexus/Oculus/boss_urom.cpp
../scripts/Northrend/Nexus/Oculus/boss_varos.cpp
../scripts/Northrend/Nexus/Oculus/instance_oculus.cpp
../scripts/Northrend/Nexus/Oculus/oculus.cpp
../scripts/Northrend/ObsidianSanctum/boss_sartharion.cpp
../scripts/Northrend/ObsidianSanctum/instance_obsidian_sanctum.cpp
../scripts/Northrend/sholazar_basin.cpp
../scripts/Northrend/storm_peaks.cpp
../scripts/Northrend/Ulduar/HallsOfLightning/boss_bjarngrim.cpp
../scripts/Northrend/Ulduar/HallsOfLightning/boss_ionar.cpp
../scripts/Northrend/Ulduar/HallsOfLightning/boss_loken.cpp
../scripts/Northrend/Ulduar/HallsOfLightning/boss_volkhan.cpp
../scripts/Northrend/Ulduar/HallsOfLightning/instance_halls_of_lightning.cpp
../scripts/Northrend/Ulduar/HallsOfStone/boss_krystallus.cpp
../scripts/Northrend/Ulduar/HallsOfStone/boss_maiden_of_grief.cpp
../scripts/Northrend/Ulduar/HallsOfStone/boss_sjonnir.cpp
../scripts/Northrend/Ulduar/HallsOfStone/halls_of_stone.cpp
../scripts/Northrend/Ulduar/HallsOfStone/instance_halls_of_stone.cpp
../scripts/Northrend/Ulduar/ulduar/boss_algalon.cpp
../scripts/Northrend/Ulduar/ulduar/boss_assembly_of_iron.cpp
../scripts/Northrend/Ulduar/ulduar/boss_auriaya.cpp
../scripts/Northrend/Ulduar/ulduar/boss_flame_leviathan.cpp
../scripts/Northrend/Ulduar/ulduar/boss_freya.cpp
../scripts/Northrend/Ulduar/ulduar/boss_general_vezax.cpp
../scripts/Northrend/Ulduar/ulduar/boss_hodir.cpp
../scripts/Northrend/Ulduar/ulduar/boss_ignis.cpp
../scripts/Northrend/Ulduar/ulduar/boss_kologarn.cpp
../scripts/Northrend/Ulduar/ulduar/boss_mimiron.cpp
../scripts/Northrend/Ulduar/ulduar/boss_razorscale.cpp
../scripts/Northrend/Ulduar/ulduar/boss_thorim.cpp
../scripts/Northrend/Ulduar/ulduar/boss_xt002.cpp
../scripts/Northrend/Ulduar/ulduar/boss_yoggsaron.cpp
../scripts/Northrend/Ulduar/ulduar/instance_ulduar.cpp
../scripts/Northrend/Ulduar/ulduar/ulduar_teleporter.cpp
../scripts/Northrend/UtgardeKeep/UtgardeKeep/boss_ingvar_the_plunderer.cpp
../scripts/Northrend/UtgardeKeep/UtgardeKeep/boss_keleseth.cpp
../scripts/Northrend/UtgardeKeep/UtgardeKeep/boss_skarvald_dalronn.cpp
../scripts/Northrend/UtgardeKeep/UtgardeKeep/instance_utgarde_keep.cpp
../scripts/Northrend/UtgardeKeep/UtgardeKeep/utgarde_keep.cpp
../scripts/Northrend/UtgardeKeep/UtgardePinnacle/boss_palehoof.cpp
../scripts/Northrend/UtgardeKeep/UtgardePinnacle/boss_skadi.cpp
../scripts/Northrend/UtgardeKeep/UtgardePinnacle/boss_svala.cpp
../scripts/Northrend/UtgardeKeep/UtgardePinnacle/boss_ymiron.cpp
../scripts/Northrend/UtgardeKeep/UtgardePinnacle/instance_pinnacle.cpp
../scripts/Northrend/VaultOfArchavon/boss_archavon.cpp
../scripts/Northrend/VaultOfArchavon/boss_emalon.cpp
../scripts/Northrend/VaultOfArchavon/boss_koralon.cpp
../scripts/Northrend/VaultOfArchavon/boss_toravon.cpp
../scripts/Northrend/VaultOfArchavon/instance_vault_of_archavon.cpp
../scripts/Northrend/VioletHold/boss_cyanigosa.cpp
../scripts/Northrend/VioletHold/boss_erekem.cpp
../scripts/Northrend/VioletHold/boss_ichoron.cpp
../scripts/Northrend/VioletHold/boss_lavanthor.cpp
../scripts/Northrend/VioletHold/boss_moragg.cpp
../scripts/Northrend/VioletHold/boss_xevozz.cpp
../scripts/Northrend/VioletHold/boss_zuramat.cpp
../scripts/Northrend/VioletHold/instance_violet_hold.cpp
../scripts/Northrend/VioletHold/violet_hold.cpp
../scripts/Northrend/zuldrak.cpp
../scripts/OutdoorPvP/OutdoorPvPEP.cpp
../scripts/OutdoorPvP/OutdoorPvPHP.cpp
../scripts/OutdoorPvP/OutdoorPvPNA.cpp
../scripts/OutdoorPvP/OutdoorPvPSI.cpp
../scripts/OutdoorPvP/OutdoorPvPTF.cpp
../scripts/OutdoorPvP/OutdoorPvPZM.cpp
../scripts/Outland/Auchindoun/AuchenaiCrypts/boss_exarch_maladaar.cpp
../scripts/Outland/Auchindoun/AuchenaiCrypts/boss_shirrak_the_dead_watcher.cpp
../scripts/Outland/Auchindoun/ManaTombs/boss_nexusprince_shaffar.cpp
../scripts/Outland/Auchindoun/ManaTombs/boss_pandemonius.cpp
../scripts/Outland/Auchindoun/SethekkHalls/boss_darkweaver_syth.cpp
../scripts/Outland/Auchindoun/SethekkHalls/boss_tailonking_ikiss.cpp
../scripts/Outland/Auchindoun/SethekkHalls/instance_sethekk_halls.cpp
../scripts/Outland/Auchindoun/ShadowLabyrinth/boss_ambassador_hellmaw.cpp
../scripts/Outland/Auchindoun/ShadowLabyrinth/boss_blackheart_the_inciter.cpp
../scripts/Outland/Auchindoun/ShadowLabyrinth/boss_grandmaster_vorpil.cpp
../scripts/Outland/Auchindoun/ShadowLabyrinth/boss_murmur.cpp
../scripts/Outland/Auchindoun/ShadowLabyrinth/instance_shadow_labyrinth.cpp
../scripts/Outland/BlackTemple/black_temple.cpp
../scripts/Outland/BlackTemple/boss_bloodboil.cpp
../scripts/Outland/BlackTemple/boss_illidan.cpp
../scripts/Outland/BlackTemple/boss_mother_shahraz.cpp
../scripts/Outland/BlackTemple/boss_reliquary_of_souls.cpp
../scripts/Outland/BlackTemple/boss_shade_of_akama.cpp
../scripts/Outland/BlackTemple/boss_supremus.cpp
../scripts/Outland/BlackTemple/boss_teron_gorefiend.cpp
../scripts/Outland/BlackTemple/boss_warlord_najentus.cpp
../scripts/Outland/BlackTemple/illidari_council.cpp
../scripts/Outland/BlackTemple/instance_black_temple.cpp
../scripts/Outland/blades_edge_mountains.cpp
../scripts/Outland/boss_doomlord_kazzak.cpp
../scripts/Outland/boss_doomwalker.cpp
../scripts/Outland/CoilfangReservoir/SerpentShrine/boss_fathomlord_karathress.cpp
../scripts/Outland/CoilfangReservoir/SerpentShrine/boss_hydross_the_unstable.cpp
../scripts/Outland/CoilfangReservoir/SerpentShrine/boss_lady_vashj.cpp
../scripts/Outland/CoilfangReservoir/SerpentShrine/boss_leotheras_the_blind.cpp
../scripts/Outland/CoilfangReservoir/SerpentShrine/boss_lurker_below.cpp
../scripts/Outland/CoilfangReservoir/SerpentShrine/boss_morogrim_tidewalker.cpp
../scripts/Outland/CoilfangReservoir/SerpentShrine/instance_serpent_shrine.cpp
../scripts/Outland/CoilfangReservoir/SteamVault/boss_hydromancer_thespia.cpp
../scripts/Outland/CoilfangReservoir/SteamVault/boss_mekgineer_steamrigger.cpp
../scripts/Outland/CoilfangReservoir/SteamVault/boss_warlord_kalithresh.cpp
../scripts/Outland/CoilfangReservoir/SteamVault/instance_steam_vault.cpp
../scripts/Outland/CoilfangReservoir/underbog/boss_hungarfen.cpp
../scripts/Outland/CoilfangReservoir/underbog/boss_the_black_stalker.cpp
../scripts/Outland/GruulsLair/boss_gruul.cpp
../scripts/Outland/GruulsLair/boss_high_king_maulgar.cpp
../scripts/Outland/GruulsLair/instance_gruuls_lair.cpp
../scripts/Outland/hellfire_peninsula.cpp
../scripts/Outland/HellfireCitadel/BloodFurnace/boss_broggok.cpp
../scripts/Outland/HellfireCitadel/BloodFurnace/boss_kelidan_the_breaker.cpp
../scripts/Outland/HellfireCitadel/BloodFurnace/boss_the_maker.cpp
../scripts/Outland/HellfireCitadel/BloodFurnace/instance_blood_furnace.cpp
../scripts/Outland/HellfireCitadel/HellfireRamparts/boss_omor_the_unscarred.cpp
../scripts/Outland/HellfireCitadel/HellfireRamparts/boss_vazruden_the_herald.cpp
../scripts/Outland/HellfireCitadel/HellfireRamparts/boss_watchkeeper_gargolmar.cpp
../scripts/Outland/HellfireCitadel/HellfireRamparts/instance_hellfire_ramparts.cpp
../scripts/Outland/HellfireCitadel/MagtheridonsLair/boss_magtheridon.cpp
../scripts/Outland/HellfireCitadel/MagtheridonsLair/instance_magtheridons_lair.cpp
../scripts/Outland/HellfireCitadel/ShatteredHalls/boss_nethekurse.cpp
../scripts/Outland/HellfireCitadel/ShatteredHalls/boss_warbringer_omrogg.cpp
../scripts/Outland/HellfireCitadel/ShatteredHalls/boss_warchief_kargath_bladefist.cpp
../scripts/Outland/HellfireCitadel/ShatteredHalls/instance_shattered_halls.cpp
../scripts/Outland/nagrand.cpp
../scripts/Outland/netherstorm.cpp
../scripts/Outland/shadowmoon_valley.cpp
../scripts/Outland/shattrath_city.cpp
../scripts/Outland/TempestKeep/arcatraz/arcatraz.cpp
../scripts/Outland/TempestKeep/arcatraz/boss_harbinger_skyriss.cpp
../scripts/Outland/TempestKeep/arcatraz/instance_arcatraz.cpp
../scripts/Outland/TempestKeep/botanica/boss_high_botanist_freywinn.cpp
../scripts/Outland/TempestKeep/botanica/boss_laj.cpp
../scripts/Outland/TempestKeep/botanica/boss_warp_splinter.cpp
../scripts/Outland/TempestKeep/Eye/boss_alar.cpp
../scripts/Outland/TempestKeep/Eye/boss_astromancer.cpp
../scripts/Outland/TempestKeep/Eye/boss_kaelthas.cpp
../scripts/Outland/TempestKeep/Eye/boss_void_reaver.cpp
../scripts/Outland/TempestKeep/Eye/instance_the_eye.cpp
../scripts/Outland/TempestKeep/Eye/the_eye.cpp
../scripts/Outland/TempestKeep/Mechanar/boss_gatewatcher_gyrokill.cpp
../scripts/Outland/TempestKeep/Mechanar/boss_gatewatcher_ironhand.cpp
../scripts/Outland/TempestKeep/Mechanar/boss_nethermancer_sepethrea.cpp
../scripts/Outland/TempestKeep/Mechanar/boss_pathaleon_the_calculator.cpp
../scripts/Outland/TempestKeep/Mechanar/instance_mechanar.cpp
../scripts/Outland/terokkar_forest.cpp
../scripts/Outland/zangarmarsh.cpp
../scripts/Spells/spell_dk.cpp
../scripts/Spells/spell_druid.cpp
../scripts/Spells/spell_generic.cpp
../scripts/Spells/spell_hunter.cpp
../scripts/Spells/spell_item.cpp
../scripts/Spells/spell_mage.cpp
../scripts/Spells/spell_paladin.cpp
../scripts/Spells/spell_priest.cpp
../scripts/Spells/spell_quest.cpp
../scripts/Spells/spell_rogue.cpp
../scripts/Spells/spell_shaman.cpp
../scripts/Spells/spell_warlock.cpp
../scripts/Spells/spell_warrior.cpp
../scripts/World/achievement_scripts.cpp
../scripts/World/areatrigger_scripts.cpp
../scripts/World/boss_emeriss.cpp
../scripts/World/boss_lethon.cpp
../scripts/World/boss_taerar.cpp
../scripts/World/boss_ysondre.cpp
../scripts/World/chat_log.cpp
../scripts/World/go_scripts.cpp
../scripts/World/guards.cpp
../scripts/World/item_scripts.cpp
../scripts/World/mob_generic_creature.cpp
../scripts/World/npc_innkeeper.cpp
../scripts/World/npc_professions.cpp
../scripts/World/npc_taxi.cpp
../scripts/World/npcs_special.cpp

#SCRIPTS HEADER FILES
../scripts/EasternKingdoms/BlackrockDepths/blackrock_depths.h
../scripts/EasternKingdoms/Deadmines/deadmines.h
../scripts/EasternKingdoms/Gnomeregan/gnomeregan.h
../scripts/EasternKingdoms/Karazhan/karazhan.h
../scripts/EasternKingdoms/MagistersTerrace/magisters_terrace.h
../scripts/EasternKingdoms/MoltenCore/molten_core.h
../scripts/EasternKingdoms/ScarletMonastery/scarlet_monastery.h
../scripts/EasternKingdoms/Scholomance/scholomance.h
../scripts/EasternKingdoms/ShadowfangKeep/shadowfang_keep.h
../scripts/EasternKingdoms/Stratholme/stratholme.h
../scripts/EasternKingdoms/SunkenTemple/sunken_temple.h
../scripts/EasternKingdoms/SunwellPlateau/sunwell_plateau.h
../scripts/EasternKingdoms/Uldaman/uldaman.h
../scripts/EasternKingdoms/ZulAman/zulaman.h
../scripts/EasternKingdoms/ZulGurub/zulgurub.h
../scripts/Kalimdor/BlackfathomDeeps/blackfathom_deeps.h
../scripts/Kalimdor/CavernsOfTime/BattleForMountHyjal/hyjal.h
../scripts/Kalimdor/CavernsOfTime/BattleForMountHyjal/hyjal_trash.h
../scripts/Kalimdor/CavernsOfTime/BattleForMountHyjal/hyjalAI.h
../scripts/Kalimdor/CavernsOfTime/CullingOfStratholme/culling_of_stratholme.h
../scripts/Kalimdor/CavernsOfTime/DarkPortal/dark_portal.h
../scripts/Kalimdor/CavernsOfTime/EscapeFromDurnholdeKeep/old_hillsbrad.h
../scripts/Kalimdor/OnyxiasLair/onyxias_lair.h
../scripts/Kalimdor/RazorfenDowns/razorfen_downs.h
../scripts/Kalimdor/RazorfenKraul/razorfen_kraul.h
../scripts/Kalimdor/RuinsOfAhnQiraj/ruins_of_ahnqiraj.h
../scripts/Kalimdor/TempleOfAhnQiraj/temple_of_ahnqiraj.h
../scripts/Kalimdor/WailingCaverns/wailing_caverns.h
../scripts/Kalimdor/ZulFarrak/zulfarrak.h
../scripts/Northrend/AzjolNerub/ahnkahet/ahnkahet.h
../scripts/Northrend/AzjolNerub/AzjolNerub/azjol_nerub.h
../scripts/Northrend/CrusadersColiseum/TrialOfTheChampion/trial_of_the_champion.h
../scripts/Northrend/CrusadersColiseum/TrialOfTheCrusader/trial_of_the_crusader.h
../scripts/Northrend/DraktharonKeep/drak_tharon_keep.h
../scripts/Northrend/FrozenHalls/ForgeOfSouls/forge_of_souls.h
../scripts/Northrend/FrozenHalls/HallsOfReflection/halls_of_reflection.h
../scripts/Northrend/FrozenHalls/PitOfSaron/pit_of_saron.h
../scripts/Northrend/Gundrak/gundrak.h
../scripts/Northrend/IcecrownCitadel/icecrown_citadel.h
../scripts/Northrend/Naxxramas/naxxramas.h
../scripts/Northrend/Nexus/EyeOfEternity/eye_of_eternity.h
../scripts/Northrend/Nexus/Nexus/nexus.h
../scripts/Northrend/Nexus/Oculus/oculus.h
../scripts/Northrend/ObsidianSanctum/obsidian_sanctum.h
../scripts/Northrend/Ulduar/HallsOfLightning/halls_of_lightning.h
../scripts/Northrend/Ulduar/HallsOfStone/halls_of_stone.h
../scripts/Northrend/Ulduar/ulduar/ulduar.h
../scripts/Northrend/UtgardeKeep/UtgardeKeep/utgarde_keep.h
../scripts/Northrend/UtgardeKeep/UtgardePinnacle/utgarde_pinnacle.h
../scripts/Northrend/VaultOfArchavon/vault_of_archavon.h
../scripts/Northrend/VioletHold/violet_hold.h
../scripts/OutdoorPvP/OutdoorPvPEP.h
../scripts/OutdoorPvP/OutdoorPvPHP.h
../scripts/OutdoorPvP/OutdoorPvPNA.h
../scripts/OutdoorPvP/OutdoorPvPSI.h
../scripts/OutdoorPvP/OutdoorPvPTF.h
../scripts/OutdoorPvP/OutdoorPvPZM.h
../scripts/Outland/Auchindoun/SethekkHalls/sethekk_halls.h
../scripts/Outland/Auchindoun/ShadowLabyrinth/shadow_labyrinth.h
../scripts/Outland/BlackTemple/black_temple.h
../scripts/Outland/CoilfangReservoir/SerpentShrine/serpent_shrine.h
../scripts/Outland/CoilfangReservoir/SteamVault/steam_vault.h
../scripts/Outland/GruulsLair/gruuls_lair.h
../scripts/Outland/HellfireCitadel/BloodFurnace/blood_furnace.h
../scripts/Outland/HellfireCitadel/HellfireRamparts/hellfire_ramparts.h
../scripts/Outland/HellfireCitadel/MagtheridonsLair/magtheridons_lair.h
../scripts/Outland/HellfireCitadel/ShatteredHalls/shattered_halls.h
../scripts/Outland/TempestKeep/arcatraz/arcatraz.h
../scripts/Outland/TempestKeep/Eye/the_eye.h
../scripts/Outland/TempestKeep/Mechanar/mechanar.h
)

add_library(main STATIC ${main_STAT_SRCS})

ADD_DEPENDENCIES(main revision_nr.h)
